--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,4 @@
-/* :root {
+:root {
   --background: #ffffff;
   --foreground: #171717;
 }
@@ -14,6 +14,7 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  font-family: var(--font-roboto), sans-serif;
 }
 
 body {
@@ -39,4 +40,4 @@ a {
   html {
     color-scheme: dark;
   }
-} */
+} 
